// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new_maintainability_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error overview-quality-gate-condition-leak"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": undefined,
        "id": "abcd-key",
        "resolved": "false",
        "sinceLeakPeriod": "true",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="new_maintainability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_maintainability_rating"
        />
        new_maintainability_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`new_open_issues 1`] = `
<DrilldownLink
  className="overview-quality-gate-condition overview-quality-gate-condition-error overview-quality-gate-condition-leak"
  component="abcd-key"
  metric="new_open_issues"
  sinceLeakPeriod={true}
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="new_open_issues"
        metricType="INT"
        value="10"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_open_issues"
        />
        new_open_issues
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT
         
        0
      </div>
    </div>
  </div>
</DrilldownLink>
`;

exports[`new_reliability_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error overview-quality-gate-condition-leak"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": undefined,
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "sinceLeakPeriod": "true",
        "types": "BUG",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="new_reliability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_reliability_rating"
        />
        new_reliability_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`new_security_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error overview-quality-gate-condition-leak"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": undefined,
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "sinceLeakPeriod": "true",
        "types": "VULNERABILITY",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="new_security_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_security_rating"
        />
        new_security_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`open_issues 1`] = `
<DrilldownLink
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  component="abcd-key"
  metric="open_issues"
  sinceLeakPeriod={false}
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="open_issues"
        metricType="INT"
        value="10"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="open_issues"
        />
        Open open_issues
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT
         
        0
      </div>
    </div>
  </div>
</DrilldownLink>
`;

exports[`reliability_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": undefined,
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "types": "BUG",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="reliability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="reliability_rating"
        />
        reliability_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`security_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": undefined,
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "types": "VULNERABILITY",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="security_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="security_rating"
        />
        security_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`should work with branch 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": "feature",
        "id": "abcd-key",
        "resolved": "false",
        "sinceLeakPeriod": "true",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="new_maintainability_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_maintainability_rating"
        />
        new_maintainability_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`sqale_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "branch": undefined,
        "id": "abcd-key",
        "resolved": "false",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        decimals={null}
        metricKey="sqale_rating"
        metricType="RATING"
        value="3"
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="sqale_rating"
        />
        sqale_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;
